# lntc_cpp

./: CMakeLists.txt  LICENSE  README.md  lntc_cpp.hpp
include/: lntc_cpp.hpp
include/lntc_cpp/: collections.hpp  math.hpp  strings.hpp
test/: test.cpp
